# homework_5

./: README.md  pyproject.toml
src/homework_5/: check_sum.py
